change histo to genes per 1Mbp

--- a/circos/configs/pgen_circos.conf
+++ b/circos/configs/pgen_circos.conf
@@ -67,18 +67,18 @@ radius2       = 0.99r
 type      = histogram
 thickness = 2
 
-# Dense histogram outside ideogram circle
+# Gene density histogram (per 1Mbp) outside ideogram circle
 
 <plot>
 
 show    = yes
 
-file    = data/plotting/pgen_scaf01_percent_meth_histo.txt
+file    = data/plotting/pgen_genes-per-1Mbp_histo.txt
 z       = 5
 max_gap = 5u
 color   = black
-min     = 75
-max     = 100
+min     = 0
+max     = 110
 r0      = 1.075r
 r1      = 1.175r
 </plot>
