--- a/circos/configs/pgen_circos.conf
+++ b/circos/configs/pgen_circos.conf
@@ -10,79 +10,67 @@ chromosomes_units = 1000000
 <<include etc/image.conf>>
 </image>
 
-<links>
+  <links>
 
-<link>
-# Sets location of link file and default line bend, color, thickness
-file          = data/links/pg_test.txt
-radius        = 0.8r
-bezier_radius = 0r
-color         = black_a4
-thickness     = 10
+    <link>
+    # Sets location of link file and default line bend, color, thickness
+    file          = data/links/pg_test.txt
+    radius        = 0.8r
+    bezier_radius = 0r
+    color         = black_a4
+    thickness     = 10
 
-<rules>
-# Tells program to process all rules below this one
-flow          = continue
-<rule>
+      <rules>
+      # Tells program to process all rules below this one
+      flow          = continue
 
-# For any links originating from pg1
-# set link line very close to ideogram
-condition     = from(pg1)
-radius1       = 0.99r
-</rule>
+        <rule>
+        # For any links originating from pg1
+        # set link line very close to ideogram
+        condition     = from(pg1)
+        radius1       = 0.99r
+        </rule>
 
-<rule>
+        <rule>
+        # For any links ending at pg12
+        # set link line very close to ideogram
+        condition     = to(pg12)
+        radius2       = 0.99r
+        </rule>
 
-# For any links ending at pg12
-# set link line very close to ideogram
-condition     = to(pg12)
-radius2       = 0.99r
+        <rule>
+        condition     = to(pg14)
+        radius2       = 0.99r
+        </rule>
 
-</rule>
+        <rule>
+        condition     = to(pg18)
+        radius2       = 0.99r
+        </rule>
 
-<rule>
+      </rules>
 
-condition     = to(pg14)
-radius2       = 0.99r
-
-</rule>
-
-<rule>
-
-condition     = to(pg18)
-radius2       = 0.99r
-
-</rule>
-
-
-</rules>
-
-</link>
+    </link>
 
 </links>
 
 
-<plots>
+  <plots>
 
-type      = histogram
-thickness = 2
+  type      = histogram
+  thickness = 2
 
-# Gene density histogram (per 1Mbp) outside ideogram circle
+    <plot>
+    # Gene density histogram (per 1Mbp) outside ideogram circle
+    show    = yes
 
-<plot>
-
-show    = yes
-
-file    = data/plotting/pgen_genes-per-1Mbp_histo.txt
-z       = 5
-max_gap = 5u
-color   = black
-min     = 0
-max     = 110
-r0      = 1.075r
-r1      = 1.175r
-</plot>
-</plots>
+    file    = data/plotting/pgen_genes-per-1Mbp_histo.txt
+    #min     = 0
+    #max     = 110
+    r0      = 0.98r
+    r1      = 0.85r
+    </plot>
+  </plots>
 
 <<include etc/colors_fonts_patterns.conf>>
 
