try smaller histo values to shift interior, change extend_bin to no

--- a/circos/configs/pgen_circos.conf
+++ b/circos/configs/pgen_circos.conf
@@ -67,8 +67,10 @@ chromosomes_units = 1000000
     file    = data/plotting/pgen_genes-per-1Mbp_histo.txt
     #min     = 0
     #max     = 110
-    r0      = 0.98r
-    r1      = 0.85r
+    r0      = 0.9r
+    r1      = 0.7r
+
+    extend_bin  = no
     </plot>
   </plots>
 
