change histo values to match Christian's code

--- a/circos/configs/pgen_circos.conf
+++ b/circos/configs/pgen_circos.conf
@@ -10,7 +10,7 @@ chromosomes_units = 1000000
 <<include etc/image.conf>>
 </image>
 
-  <links>
+<links>
 
     <link>
     # Sets location of link file and default line bend, color, thickness
@@ -55,24 +55,47 @@ chromosomes_units = 1000000
 </links>
 
 
-  <plots>
+<plots>
 
-  type      = histogram
-  thickness = 2
+  <plot>
+  # Gene density histogram (per 1Mbp) outside ideogram circle
+  type            = histogram
+  show            = yes
+  file            = data/plotting/pgen_genes-per-1Mbp_histo.txt
 
-    <plot>
-    # Gene density histogram (per 1Mbp) outside ideogram circle
-    show    = yes
+      r1          = 0.98r
+			r0          = 0.85r
+			fill_color  = vdgrey
+			#min	      = 0
+			#max        = 1
+			#color      = fdcc8a,fc8d59,d7301f
 
-    file    = data/plotting/pgen_genes-per-1Mbp_histo.txt
-    #min     = 0
-    #max     = 110
-    r0      = 0.9r
-    r1      = 0.7r
+				<backgrounds>
+					#background GC histogram
+						<background>
+							color = white
+						</background>
 
-    extend_bin  = no
-    </plot>
-  </plots>
+						<background>
+							color = vvlgrey
+							y0    = 0.2r
+							y1    = 0.5r
+						</background>
+
+						<background>
+							color = vlgrey
+							y0    = 0.5r
+							y1    = 0.8r
+						</background>
+
+						<background>
+							color = lgrey
+							y0    = 0.8r
+						</background>
+
+				</backgrounds>
+  </plot>
+</plots>
 
 <<include etc/colors_fonts_patterns.conf>>
 
