add highlight track option for gene locations

--- a/circos/configs/pgen_circos.conf
+++ b/circos/configs/pgen_circos.conf
@@ -53,6 +53,17 @@ chromosomes_units = 1000000
   </plot>
 </plots>
 
+<highlights>
+  <highlight>
+  file             = data/plotting/Panopea-generosa-v1.0.a4.gene.circos.bed
+  r0               = 1.1r
+  r1               = 1.15r
+  fill_color       = blue
+  stroke_color     = dblue
+  stroke_thickness = 2
+  </highlight>
+</highlights>
+
 <<include etc/colors_fonts_patterns.conf>>
 
 <<include etc/housekeeping.conf>>
