plot just scaffold 1

--- a/circos/configs/pgen_circos.conf
+++ b/circos/configs/pgen_circos.conf
@@ -1,7 +1,3 @@
-karyotype = data/karyotype/karyotype.pg.txt
-
-chromosomes_units = 1000000
-
 <<include pgen_ideogram.conf>>
 
 <<include pgen_ticks.conf>>
@@ -10,6 +6,14 @@ chromosomes_units = 1000000
 <<include etc/image.conf>>
 </image>
 
+karyotype = data/karyotype/karyotype.pg.txt
+
+chromosomes_units = 1000000
+
+# to explicitly define what is drawn
+# chromosome subset
+chromosomes_display_default = no
+chromosomes                 = pg1
 
 <plots>
 
