--- a/circos/configs/pgen_circos.conf
+++ b/circos/configs/pgen_circos.conf
@@ -22,6 +22,7 @@ chromosomes                 = pg1
     type            = histogram
     show            = yes
     file            = data/plotting/pgen_genes-per-1Mbp_histo.txt
+    extend_bin      = no
 
     r1              = 0.98r
   	r0              = 0.85r
@@ -54,6 +55,21 @@ chromosomes                 = pg1
 		</background>
 
 	</backgrounds>
+  </plot>
+
+  <plot>
+  # Methylation density (75%) histogram (per 1Mbp) ideogram circle
+  type            = histogram
+  show            = yes
+  file            = data/plotting/pgen_meth75-per-1Mbp_histo.txt
+
+  z               = 5
+  extend_bin      = no
+
+  r1              = 0.83r
+  r0              = 0.75r
+  fill_color      = green
+
   </plot>
 </plots>
 
